Changes since RTEMS-NFS 1.8:
Changes since RTEMS-NFS 1.7:
 - BUGFIX: must not attempt to release node if rtems_filesystem_evaluate_path()
   fails in nfs_eval_link() since pathloc contains no valid node.
   (Occasional crashes during libtecla filename completion might be caused
   by this bug.)
Changes since RTEMS-NFS 1.6:
 - when using rtems-style installation path (w/o SSRL tweaks) headers
   must be installed to '<bspdir>/lib/include', not '<bspdir>/include'.
Changes since RTEMS-NFS 1.5:
 - BUGFIX: path lookup ('evalpath') would erroneously return 0 (success) if
           1. server had been alive in the past
           2. server connectivity is lost
           the bug, if triggered, caused memory corruption.
   (fixes PR#1284)          
 - rtems_message_queue_receive() length argument is a 'size_t' (later rtems
   versions).
Changes since RTEMS-NFS 1.4:
LICENSE:
 - changed license terms; RTEMS-NFS is now released under the more liberal
   'SLAC license'.
NFS:
 - silenced compiler warnings (follow handler declaration changes in libio.h
   by using 'size_t' instead of 'uint32_t' etc.).

Changes since RTEMS-NFS 1.3:
RPCIOD:
 - round timeout to next system clock tick and ensure it is at least
   1 tick.
 - cap retransmission timeout to transaction lifetime.
 - BUGFIX (reported by Steven Johnson, 12/5/06): we must change the XID
   before sending a timed-out transaction back to the requestor to prevent
   a late reply from being accepted.
 - Made task priority run-time configurable (and read from rtems_bsdnet_config
   by default).

NFS:
 - added nfsGetTimeout() and nfsSetTimeout() to retrieve and modify,
   respectively the (global) timeout for NFS/MOUNT operations.
 - Minor mod. to fix 'type-punned pointer' warning (can avoid pointer cast).
 - Added global variable 'nfsStBlksize' (defaults to 8k) which is now
   used to report the file system's 'preferred' blocksize (stat(2)/st_blksize).
   The old behavior (server's fattr.st_blksize is passed through) can be